# pyhocon3

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: pre-commit.yml  test.yml
docs/source/: conf.py  index.rst
pyhocon/: __init__.py  compat.py  config_parser.py  config_tree.py  converter.py  exceptions.py  tool.py
samples/: all_animals.conf
tests/: test_config_parser.py  test_config_tree.py  test_converter.py  test_tool.py
